# fileParser

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json  file.txt  project.json  runDebug
.cache/clangd/index/: main.cpp.C55F22CC0A7E0A2C.idx
logs/: log110335-08022024.txt  log110809-08022024.txt  log111259-08022024.txt  log111347-08022024.txt  log111355-08022024.txt  log111421-08022024.txt  log111752-08022024.txt  log111827-08022024.txt  log111852-08022024.txt  log155150-08022024.txt  log155220-08022024.txt  log155337-08022024.txt  log155350-08022024.txt  log155527-08022024.txt  log155645-08022024.txt  log155842-08022024.txt  log155857-08022024.txt  log155927-08022024.txt  log160003-08022024.txt
src/: files.txt  functions.cpp  functions.hpp  main.a1  main.cpp  main.cpp.snalyzerinfo  main.s1
testFiles/: file.txt  file2.txt
